--- a/src/components/drivers/DriversBody/DriversProperties/DriversProperties.css
+++ b/src/components/drivers/DriversBody/DriversProperties/DriversProperties.css
@@ -1,82 +1,91 @@
-.drivers_properties{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width:100%;
-
-}
-.properties_leftBlock{
-  display: flex;
-  flex-direction: row;
-  height: 100%;
-  margin-right: auto;
+.drivers_properties {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
-.properties_rightBlock{
-  display: flex;
-  flex-direction: row;
-  height: 100%;
-  margin-left: auto;
+.properties_leftBlock {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    margin-right: auto;
 }
 
-.drivers_properties_text{
-  display: flex;
-  float: left;
-
-  height: 100%;
-  font-size: 0.8rem;
-  color:#666666;
-  font-family: "Roboto Light";
-  line-height: 30px;
-  text-align: left;
+.properties_rightBlock {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    margin-left: auto;
 }
 
-.properties_leftButton{
-  float: left;
-  margin-right:5px;
-  
+.drivers_properties_text {
+    display: flex;
+    float: left;
+    height: 100%;
+    font-size: 9pt;
+    color: #666666;
+    font-family: "Roboto";
+    font-weight: 300;
+    line-height: 30px;
+    text-align: left;
 }
-.properties_rightButton{
-  float: right;
-  margin-left:5px; 
+
+.properties_leftButton {
+    float: left;
+    margin-right: 5px;
 }
-.properties_buttonStyle{
-  display: flex;
-  position: relative;
-  flex-direction: row; 
-  font-family: "Roboto Regular";
-  font-size: 9pt;
-  color: #304269;
-  background-color: #d9e8f5;
-  border-radius: 3px;
-  text-align: center;
-  line-height: 250%;
+
+.properties_rightButton {
+    float: right;
+    margin-left: 5px;
 }
+
+.properties_buttonStyle {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 9pt;
+    color: #304269;
+    background-color: #d9e8f5;
+    border-radius: 3px;
+    text-align: center;
+    line-height: 250%;
+}
+
 /*line-height в предыдущем стиле какое-то странное*/
-.properties_value{
-  display: flex;
-  margin: auto 2px;
+
+.properties_value {
+    display: flex;
+    margin: auto 2px;
 }
-.properties_arrow{
-  display: flex;
-  margin: auto 2px;
-  width: 8px;
-  height: 8px;
-  background: url(pictures/drivers_properties_arrow.png) no-repeat;
+
+.properties_arrow {
+    display: flex;
+    margin: auto 2px;
+    width: 8px;
+    height: 8px;
+    background: url(pictures/drivers_properties_arrow.png) no-repeat;
 }
-.properties_carPicture{
-  display: flex;
-  margin: auto 2px;
-  width: 20px;
+
+.properties_carPicture {
+    display: flex;
+    margin: auto 2px;
+    width: 20px;
 }
-.properties_rightButton_characteristic{
-  display: flex;
-  margin: auto 2px;
+
+.properties_rightButton_characteristic {
+    display: flex;
+    margin: auto 2px;
 }
-.properties_rightButton_value{
-  display: flex;
-  margin: auto 2px;
-  font-family: "Roboto Medium";
-  font-size: 9pt;
+
+.properties_rightButton_value {
+    display: flex;
+    margin: auto 2px;
+    font-family: "Roboto";
+    font-weight: 500;
+    font-size: 9pt;
 }
