--- a/src/components/drivers/DriversBody/DriversBlock/InfoBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/InfoBlock.css
@@ -1,70 +1,93 @@
-.block_element_infoBlock{
+.block_element_infoBlock {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     height: 100%;
     width: 65%;
-    color:  #304269;
-    
-  }
-  .infoBlock_starsBlock{
+    color: #304269;
+}
+.block_element_infoBlock_top{
+    margin-bottom: 9%;
+}
+
+.infoBlock_starsBlock {
     display: flex;
     position: relative;
     flex-direction: row;
+    align-items: center;
     height: 5%;
-    width: 75%;
-    font-size: 0.7rem;
-  }
-  .infoBlock_starsBlock_value{
+    width: 100%;
+    font-size: 9pt;
+}
+
+.infoBlock_starsBlock_value {
     display: flex;
     height: 100%;
     width: 10%;
+    max-width: 20px;
     margin: auto 0;
-    
-  }
-  .infoBlock_starsBlock_stars{
+}
+
+.infoBlock_starsBlock_stars {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width:37.5%;
+    width: 35%;
+    max-width: 85px;
     height: 100%;
-    margin:auto auto;
-    /* padding: 0 1%; */
-    
-  }
-  .starsBlock_stars_element{
+}
+
+.starsBlock_stars_element {
     display: flex;
     position: relative;
-    width: 20%;
-    height: 100%;
-    z-index: 1;  
-  }
-  .background_stars{
+    width: 16px;
+    height: 18px;
+    /* height: 100%; */
+    z-index: 1;
+}
+
+.background_stars {
     position: absolute;
-    width: 80%;
-    height: 80%;
-    margin: 10%;
-    background-image: linear-gradient(to right,#ff6600 50%, #999999 50% );
-  }
-  .infoBlock_starsBlock_stars img{ 
+    width: 90%;
+    height: 14px;
+    margin-top: 2px;
+    background-image: linear-gradient(to right, #ff6600 50%, #ccc 50%);
+}
+
+.infoBlock_starsBlock_stars img {
     padding: 0;
     margin: 0;
-    z-index:2;
-  }
-  .infoBlock_starsBlock_number{
+    z-index: 2;
+}
+
+.infoBlock_starsBlock_number {
     display: flex;
     width: 50%;
-    height: 100%; 
-    margin: auto 0; 
+    height: 100%;
+    margin: auto 0;
     text-align: center;
-  }
-  .block_element_infoBlock_name{
+    color: #666;
+}
+
+.block_element_infoBlock_name {
     display: flex;
-    font-size: 1.5rem;
-    font-family: "Roboto Medium";
+    font-size: 18pt;
+    font-family: "Roboto";
+    font-weight: 500;
     text-align: left;
-  }
-  .block_element_infoBlock_element{
+}
+.block_element_infoBlock_bot{
     display: flex;
-    width: 100%;
-  }
-  
+    flex-direction: column;
+    /* width: 100%; */
+}
+.block_element_infoBlock_element {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: left;
+    /* width: 50%; */
+}
+.block_element_infoBlock_element div:last-child {
+    width: 60%;
+}
