--- a/src/components/drivers/DriversBody/DriversProperties/components/LanguageMenu/LanguageMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/LanguageMenu/LanguageMenu.css
@@ -1,15 +1,14 @@
-.drivers_properties_languageMenu{
+.drivers_properties_languageMenu {
     position: absolute;
-    top:34px;
+    top: 34px;
     right: 0px;
-    
     background-color: #ffffff;
     border-radius: 3px;
     box-shadow: 0 0 1px 1px rgb(236, 236, 236);
     z-index: 4;
 }
 
-.languageMenu_element{
+.languageMenu_element {
     position: relative;
     width: 116px;
     height: 30px;
@@ -21,16 +20,17 @@
     cursor: pointer;
 }
 
-.languageMenu_element:hover{
-    background-color:  #91bed4;
+.languageMenu_element:hover {
+    background-color: #91bed4;
 }
 
-.textBlock_value{
-    position:absolute;
+.textBlock_value {
+    position: absolute;
     display: inline-block;
     left: 30px;
-    font-family: "Roboto Regular";
-    font-size:9pt;
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 9pt;
     color: #304269;
     background-color: transparent;
 }
