--- a/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
@@ -1,8 +1,9 @@
 .drivers_properties_peopleMenu {
     position: absolute;
     top: 34px;
-    height: 160px;
-    width: 250px;
+    right: 0;
+    height: 120px;
+    width: 200px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 1px 1px rgb(236, 236, 236);
@@ -19,23 +20,22 @@
 
 .peopleMenu_element_part {
     width: 80%;
-    margin-top: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 20px;
+    margin: 10px;
 }
 
 .peopleMenu_element_part p {
-    font-size: 0.9rem;
+    font-size: 10pt;
     line-height: 15px;
     color: #3c4043;
     margin: 0;
     padding: 0;
 }
 .peopleMenu_element_part p.cildren{
-    font-size: 0.8rem;
+    font-size: 8pt;
 }
 
 .element_part_children {
@@ -75,7 +75,7 @@
 
 .valueBlock_value_text{
     color: #3c4043;
-    font-size: 1rem;
+    font-size: 10pt;
     margin: 0 5px;
 }
 
@@ -83,7 +83,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin: 20px;
+    margin: 10px;
     width: 100%;
 }
 
@@ -93,7 +93,7 @@
     text-decoration: none;
     cursor: pointer;
     color: #3c4043;
-    font-size: 1rem;
+    font-size: 10pt;
     background: none;
 }
 
@@ -103,7 +103,7 @@
     text-decoration: none;
     cursor: pointer;
     color: #304269;
-    font-size: 1rem;
+    font-size: 10pt;
     font-weight: bold;
     background: none;
 }
