--- a/src/components/drivers/DriversHeader/DriversHeader.css
+++ b/src/components/drivers/DriversHeader/DriversHeader.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
 }
+
 .drivers_header_logo {
     display: flex;
     flex-direction: row;
@@ -11,16 +12,17 @@
     justify-content: space-between;
     order: 0;
 }
+
 .drivers_header_buttonMass {
     margin: 2% 3% 2% 5%;
     order: 1;
 }
+
 .drivers_header_select {
     display: flex;
     flex-direction: row;
     order: 2;
 }
-
 
 .drivers_geo_block {
     display: flex;
@@ -38,17 +40,20 @@
     outline: none;
     cursor: pointer;
 }
+
 .drivers_geo_button:hover {
     color: #fff;
     text-decoration: none;
     outline: none;
 }
+
 .geo_button_value {
     min-width: 50px;
     border-radius: 5px;
     padding: 2px 4px 4px;
     background-color: #97a3b4;
 }
+
 .geo_button_value>div {
     height: 22px;
     padding: 0;
@@ -71,7 +76,7 @@ label.selectGeneral {
     position: relative;
     min-width: 70px;
     height: 30px;
-    font-size: 1rem;
+    font-size: 10.5pt;
     margin: 0;
     margin-right: 10px;
     border-radius: 5px;
@@ -157,7 +162,8 @@ label.selectGeneral input[type="radio"]:checked+label {
     text-align: center;
     font-size: 0.8rem;
     color: #304269;
-    font-family: "Roboto Light";
+    font-family: "Roboto";
+    font-weight: 300;
 }
 
 @media (max-width: 1060px) {
@@ -176,12 +182,12 @@ label.selectGeneral input[type="radio"]:checked+label {
     }
 }
 
-
 .drivers_buttonMass_button {
     text-decoration: none;
     background-color: transparent;
-    font-family: "Roboto Medium";
-    font-size: 1rem;
+    font-family: "Roboto";
+    font-weight: 500;
+    font-size: 10.5pt;
     color: #304269;
     margin: 0px 12.5px 0px 12.5px;
 }
