--- a/src/components/drivers/DriversRoute/DriversChangeRoute.css
+++ b/src/components/drivers/DriversRoute/DriversChangeRoute.css
@@ -1,10 +1,11 @@
-.route_show_cross{
+.route_show_cross {
     display: flex;
     width: 10%;
     padding: 0 2%;
-    margin-left: 2%; 
+    margin-left: 2%;
 }
-.search_input_block{
+
+.search_input_block {
     display: flex;
     flex-direction: row;
     width: 85%;
@@ -12,71 +13,79 @@
     background: transparent;
     border-bottom: 1px solid #ffffff;
 }
-.search_input_icon{
+
+.search_input_icon {
     display: flex;
     width: 10%;
     height: 100%;
 }
-.search_input_style{
+
+.search_input_style {
     display: flex;
     width: 80%;
     height: 100%;
-
     border: none;
-    
     color: #ffffff;
     background: transparent;
 }
-.route_add_city{
-  display: flex;
-  flex-direction: row;
-  color:#ffffff;
-  font-family: "Roboto";
-  font-size: 12px;
-  margin-bottom: 6%;
-  height: 15%;
+
+.route_add_city {
+    display: flex;
+    flex-direction: row;
+    color: #ffffff;
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 12px;
+    margin-bottom: 6%;
+    height: 15%;
 }
-.route_add_city_imageBlock{
+
+.route_add_city_imageBlock {
     display: flex;
     width: 4%;
     height: 140%;
     margin-right: 1%;
 }
-.route_add_city_text{
-    display: flex; 
+
+.route_add_city_text {
+    display: flex;
     margin: auto 0;
 }
 
-.route_secondBottomBlock{
+.route_secondBottomBlock {
     display: flex;
-    flex-direction:row;
-    
-    padding: 1% 0 ;
+    flex-direction: row;
+    padding: 1% 0;
     width: 50%;
 }
-.route_secondBottomBlock_elementStyle{
+
+.route_secondBottomBlock_elementStyle {
     display: flex;
     flex-direction: row;
     margin-top: auto;
 }
-.route_secondBottomBlock_date{
+
+.route_secondBottomBlock_date {
     height: 20%;
-    margin-left: auto; 
+    margin-left: auto;
 }
-.route_secondBottomBlock_button{
+
+.route_secondBottomBlock_button {
     background-color: #ff6600;
     border-radius: 5px;
     border-color: #ff6600;
     width: 120%;
-    height: 50%;  
+    height: 50%;
     color: #ffffff;
 }
-.secondBottomBlock_button_loupe{
-    display:flex;
+
+.secondBottomBlock_button_loupe {
+    display: flex;
     width: 40%;
     height: 100%;
 }
-.secondBottomBlock_calendarBlock{
+
+.secondBottomBlock_calendarBlock {
     display: flex;
     width: 82%;
     height: 100%;
@@ -84,15 +93,16 @@
     border-bottom: 1px solid white;
     background-color: transparent;
     color: white;
-    
 }
-.secondBottomBlock_calendar{
+
+.secondBottomBlock_calendar {
     display: flex;
     width: 4%;
     height: 100%;
     margin-right: 1%;
 }
-.secondBottomBlock_dateInput{
+
+.secondBottomBlock_dateInput {
     display: flex;
     width: 82%;
     height: 100%;
@@ -100,13 +110,14 @@
     background-color: transparent;
     color: white;
 }
-.secondBottomBlock_button_inner
-{
+
+.secondBottomBlock_button_inner {
     display: flex;
     flex-direction: row;
-    margin: auto; 
+    margin: auto;
 }
-.route_secondBottomBlock_searchText{
+
+.route_secondBottomBlock_searchText {
     display: flex;
     flex-direction: row;
     margin: auto 0;
