--- a/src/components/home/HomeBody/RouteMenu.css
+++ b/src/components/home/HomeBody/RouteMenu.css
@@ -16,9 +16,10 @@
 .routemenu_city_add_text {
     height: 20px;
     margin-left: 10px;
-    font-size: 0.8rem;
+    font-size: 9pt;
     color: #fff;
-    font-family: "Roboto Light";
+    font-family: "Roboto";
+    font-weight: 300;
 }
 
 .routemenu_setDate {
@@ -36,11 +37,12 @@
     background-color: transparent;
     width: 50%;
     min-width: 13.5vw;
-    font-size: 0.8rem;
+    font-size: 9pt;
     margin-left: 10px;
     margin-bottom: 30px;
     color: #ffffff;
-    font-family: "Roboto Regular";
+    font-family: "Roboto";
+    font-weight: 400;
 }
 
 ::-webkit-input-placeholder {
@@ -60,7 +62,7 @@
     margin-bottom: 19px;
 }
 
-.routemenu_parametersAdd{
+.routemenu_parametersAdd {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -76,9 +78,10 @@
     margin: 0;
     padding-left: 15px;
     line-height: 42px;
-    font-size: 0.9rem;
+    font-size: 10pt;
     color: #fff;
-    font-family: "Roboto Regular";
+    font-family: "Roboto";
+    font-weight: 400;
 }
 
 .routemenu_parametersAdd img {
@@ -152,7 +155,7 @@
 }
 
 .routemenu_search_text {
-    font-size: 1rem;
+    font-size: 10.5pt;
     color: #fff;
 }
 
@@ -171,6 +174,7 @@ p.routemenu_search_text {
     font-size: 11px;
     color: #ffffff;
     font-family: "Roboto";
+    font-weight: 500;
 }
 
 .city_input {
@@ -179,18 +183,19 @@ p.routemenu_search_text {
     border-color: white;
     background-color: transparent;
     color: white;
-    font-size: 0.8rem;
+    font-size: 9pt;
     height: 50%;
     width: 60%;
     min-width: 14vw;
 }
 
-.peopleSelect{
+.peopleSelect {
     display: flex;
     flex-direction: row;
     width: 100%;
 }
-.peopleSelect input{
+
+.peopleSelect input {
     max-width: 20px;
     margin: 5px;
 }
