--- a/src/components/home/HomeBody/calendary.css
+++ b/src/components/home/HomeBody/calendary.css
@@ -1,33 +1,38 @@
-.calendary_position{
-  position: absolute;
-  top:460px;
-  width:350px;
-  height: 315px;
-  background-color: #304269;
-
-  color: #ffffff;
-  font-size:16px;
-}
-.temp_element{
-  background-color: red;
-}
-.react-calendar__month-view__weekdays__weekday abbr{
-  color: #f26101;
-  font-size: 16px;
-  font-family: "Roboto Regular";
-  text-decoration: none;
-}
-.react-calendar__month-view__days__day{
-  color: #ffffff;
-  font-size:14px;
-}
-.react-calendar__month-view__days__day--weekend{
-  color: inherit;
-}
-.react-calendar__month-view__days__day--neighboringMonth{
-  color: grey;
-}
-.react-calendar__tile--active{
-  background-color:#f26101 ;
+.calendary_position {
+    position: absolute;
+    top: 460px;
+    width: 350px;
+    height: 315px;
+    background-color: #304269;
+    color: #ffffff;
+    font-size: 16px;
 }
 
+.temp_element {
+    background-color: red;
+}
+
+.react-calendar__month-view__weekdays__weekday abbr {
+    color: #f26101;
+    font-size: 16px;
+    font-family: "Roboto";
+    font-weight: 400;
+    text-decoration: none;
+}
+
+.react-calendar__month-view__days__day {
+    color: #ffffff;
+    font-size: 14px;
+}
+
+.react-calendar__month-view__days__day--weekend {
+    color: inherit;
+}
+
+.react-calendar__month-view__days__day--neighboringMonth {
+    color: grey;
+}
+
+.react-calendar__tile--active {
+    background-color: #f26101;
+}
