--- a/src/components/home/HomeHeader/header_css.css
+++ b/src/components/home/HomeHeader/header_css.css
@@ -64,8 +64,9 @@
 .buttonMass_button {
     text-decoration: none;
     background-color: transparent;
-    /* font-family: "Roboto Medium"; */
-    font-size: 1rem;
+    font-family: "Roboto";
+    font-weight: 500;
+    font-size: 10.5pt;
     color: #304269;
     margin: 0px 12.5px 0px 12.5px;
 }
@@ -90,7 +91,7 @@ label.selectGeneral {
     position: relative;
     min-width: 70px;
     height: 30px;
-    font-size: 1rem;
+    font-size: 10.5pt;
     margin: 0;
     margin-right: 10px;
     border-radius: 5px;
@@ -176,7 +177,8 @@ label.selectGeneral input[type="radio"]:checked+label {
     text-align: center;
     font-size: 0.8rem;
     color: #304269;
-    font-family: "Roboto Light";
+    font-family: "Roboto";
+    font-weight: 300;
 }
 
 @media (max-width: 1060px) {
