--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -34,7 +34,15 @@
     display: flex;
     position: relative;
     flex-direction: column;
-    height:30%;
+    width:100%;
+    box-shadow: 0 0 1px 1px rgba(221, 221, 221, 1);
+    padding: 1.5% 3%;
+    margin-bottom: 1%;
+}
+.commentBlock_comments{
+    display: flex;
+    position: relative;
+    flex-direction: column;
     width:100%;
     box-shadow: 0 0 1px 1px rgba(221, 221, 221, 1);
     padding: 1.5% 3%;
@@ -114,9 +122,9 @@
     flex-direction: row;
     height:15%;
     width:100%;
-    box-shadow: 0 0 1px 1px rgba(221, 221, 221, 1);
     padding: 3%;
     margin-bottom: 1%;
+    border-bottom: 1px solid #cccccc;
 }
 .valueBlock_firstElement{
     display: flex;
@@ -145,6 +153,7 @@
     flex-direction: row;
     width: 100%;
     margin-bottom: 2%;
+    
 }
 .valueBlock_starsBlock_value{
     display: flex;
@@ -152,12 +161,15 @@
     font-size: 14px;
     font-family: "Roboto";
     font-weight: 600;
+    line-height: 20px;
+    margin-right: 1%;
 }
 .valueBlock_starsBlock_stars{
     display: flex;
     flex-direction: row;
     width: 80px;
     height: 16px;
+    
 }
 .valueBlock_commentary{
     display: flex;
