--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -26,13 +26,14 @@
     flex-direction: row;
     align-items: center;
     width: 100%;
-    box-shadow: 0 0 1px 1px rgba(221, 221, 221, 1);
+    box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.25);
     padding: 3% 1.5%;
-    margin-bottom: 1%;
+    margin-bottom: 10px;
+    border-radius: 5px;
 }
 
 .drivers_block_element:hover {
-    box-shadow: 0 0 2px 5px rgba(221, 221, 221, 1);
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.25);
     cursor: pointer;
 }
 
@@ -48,9 +49,12 @@
 .block_element_right {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     height: 100%;
     width: 50%;
+}
+.block_element_right_div{
+    width: 90%;
 }
 
 .block_element_photo {
