--- a/src/components/drivers/DriversBody/DriversBlock/InfoBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/InfoBlock.css
@@ -21,6 +21,8 @@
 }
 
 .infoBlock_starsBlock_value {
+    font-family: "Roboto";
+    font-weight: 500;
     display: flex;
     height: 100%;
     width: 10%;
