--- a/src/components/drivers/DriversBody/DriversProperties/DriversProperties.css
+++ b/src/components/drivers/DriversBody/DriversProperties/DriversProperties.css
@@ -21,15 +21,15 @@
 }
 
 .drivers_properties_text {
-    display: flex;
-    float: left;
     height: 100%;
     font-size: 9pt;
     color: #666666;
     font-family: "Roboto";
-    font-weight: 300;
+    font-weight: 400;
     line-height: 30px;
     text-align: left;
+    margin-right: 4px;
+
 }
 
 .properties_leftButton {
@@ -47,20 +47,28 @@
     position: relative;
     flex-direction: row;
     font-family: "Roboto";
-    font-weight: 400;
+    font-weight: 500;
     font-size: 9pt;
     color: #304269;
     background-color: #d9e8f5;
     border-radius: 3px;
     text-align: center;
     line-height: 250%;
+    padding: 0 2px;
+    cursor: pointer;
 }
 
 /*line-height в предыдущем стиле какое-то странное*/
 
 .properties_value {
     display: flex;
-    margin: auto 2px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: auto 5px;
+}
+.properties_value img{
+    margin-right: 2px;
 }
 
 .properties_arrow {
