--- a/src/components/drivers/DriversBody/DriversCommercial/DriversCommercial.css
+++ b/src/components/drivers/DriversBody/DriversCommercial/DriversCommercial.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   width: 100%;
   padding: 5% 0;
-  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  border-radius: 5px;
+  box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.25);
 }
 .commercial_picture{
   display:flex;
