--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,8 @@
-/* 
+
 
 .footer{
-  position: absolute;
+  display: flex;
+  position: relative;
   width:100%;
   height:50px;
   bottom: 0px;
@@ -54,4 +55,4 @@
   font-size: 14px;
   color:#ffffff;
   margin: 2px 12.5px 2px 12.5px;
-} */
+} 
