--- a/src/components/driverProfile/DriverInfo.css
+++ b/src/components/driverProfile/DriverInfo.css
@@ -44,7 +44,6 @@
 .driverInfo_iconLine{
     margin-left: 25%;
     line-height: 0px;
-    margin-bottom: 5%;
     min-height: 16px;
     height: 4%;
 }
@@ -57,11 +56,40 @@
     display: flex;
     position: relative;
     width: 70%;
-    height: 75%;
+    height: 30%;
     margin: 0 auto;
     min-width: 150px;
     min-height: 100px;
 }
+.driverInfo_carPhotoBlock_switchCarPicture{
+    display: flex;
+    position: absolute;
+
+    top: 50%;                         
+    transform: translate(0, -50%);   
+    width:14%;
+    height: 18%;
+    border-radius: 100%;
+    text-align: center;
+    border: 1px solid transparent;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.15);
+}
 .driverInfo_myHeart{
     height: 8%;
 }
+
+.album_photo {
+    position: relative;
+    width: 100%;
+    padding-bottom: 70%;
+    overflow: hidden;
+ }
+ 
+ .carImageStyles {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+ }
