--- a/src/components/drivers/DriversBody/DriversBlock/InfoBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/InfoBlock.css
@@ -83,6 +83,7 @@
     font-family: "Roboto";
     font-weight: 500;
     text-align: left;
+    color: #304269;
 }
 .block_element_infoBlock_bot{
     display: flex;
