--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -1,11 +1,11 @@
-.drivers_header {
+.header {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
-.drivers_header_logo {
+.headerLogo {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -13,18 +13,13 @@
     order: 0;
 }
 
-.drivers_header_buttonMass {
-    margin: 2% 3% 2% 5%;
-    order: 1;
-}
-
-.drivers_header_select {
+.headerSelect {
     display: flex;
     flex-direction: row;
     order: 2;
 }
 
-.drivers_geo_block {
+.header_geo_block {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -34,15 +29,18 @@
     min-width: 90px;
 }
 
-.drivers_geo_button {
-    color: #fff;
+.header_geo_button {
+    /*color: #fff;*/
+    /*color: #304269;*/
     text-decoration: none;
     outline: none;
     cursor: pointer;
+    /* pointer-events: none;  */
 }
 
-.drivers_geo_button:hover {
-    color: #fff;
+.header_geo_button:hover {
+    /*color: #fff;*/
+    /*color: #304269;*/
     text-decoration: none;
     outline: none;
 }
@@ -51,13 +49,34 @@
     min-width: 50px;
     border-radius: 5px;
     padding: 2px 4px 4px;
-    background-color: #97a3b4;
+    /*background-color: #97a3b4;*/
+    /*background-color: #fff;*/
 }
 
 .geo_button_value>div {
     height: 22px;
     padding: 0;
-    border-bottom: 1px #fff dashed;
+    /*border-bottom: 1px #fff dashed;*/
+}
+
+.header_buttonMass {
+    margin: 2% 3% 2% 5%;
+    order: 1;
+}
+
+.buttonMass_button {
+    text-decoration: none;
+    background-color: transparent;
+    font-family: "Roboto";
+    font-weight: 500;
+    font-size: 10.5pt;
+    /*color: #304269;*/
+    /*color: #fff;*/
+    margin: 0px 12.5px 0px 12.5px;
+}
+
+.buttonMass_button:hover {
+    text-decoration: none;
 }
 
 .selectСgvicurrency {
@@ -65,13 +84,16 @@
     border-radius: 5px;
     padding: 3px 4px 4px;
     margin-right: 5px;
-    background-color: #97a3b4;
+    /*background-color: #97a3b4;*/
+    /*background-color: #fff;*/
     text-decoration: none;
     outline: none;
-    color: #fff;
+    /*color: #fff;*/
+    color: #304269;
 }
 
-label.selectGeneral {
+
+.selectGeneral {
     display: block;
     position: relative;
     min-width: 70px;
@@ -80,11 +102,11 @@ label.selectGeneral {
     margin: 0;
     margin-right: 10px;
     border-radius: 5px;
-    background: #97a3b4;
-    color: #fff;
+    /*background: #97a3b4;*/  
+    /*color: #fff;*/   
 }
 
-label.selectGeneral::after {
+.selectGeneral::after {
     content: ">";
     position: absolute;
     right: -10px;
@@ -95,12 +117,13 @@ label.selectGeneral::after {
     height: 26px;
     text-align: center;
     line-height: 26px;
-    color: #fff;
+    /*color: #fff;*/
+    
     transform: rotate(90deg);
     cursor: pointer;
 }
 
-label.selectGeneral label {
+.selectGeneral label {
     display: inline-block;
     min-width: 70px;
     height: 30px;
@@ -109,35 +132,36 @@ label.selectGeneral label {
     border-radius: 5px;
     white-space: nowrap;
     padding: 0 14px 0 6px;
-    background: #97a3b4;
+    /*background: #97a3b4;*/
+
 }
 
-label.selectGeneral label img {
+.selectGeneral label img {
     margin-right: 2px;
 }
 
-label.selectGeneral input,
-label.selectGeneral label {
+.selectGeneral input,
+.selectGeneral label {
     display: none;
 }
 
-label.selectGeneral div {
+.selectGeneral div {
     min-width: 100%;
     max-height: 500px;
-    background: #97a3b4;
+    /*background: #97a3b4;*/
     border-radius: 5px;
     overflow-x: hidden;
 }
 
-label.selectGeneral input[type="radio"]:checked~div {
+.selectGeneral input[type="radio"]:checked~div {
     position: absolute;
     top: 28px;
     z-index: 999;
     overflow-y: auto;
 }
 
-label.selectGeneral input[type="radio"]:checked~div>label,
-label.selectGeneral input[type="radio"]:checked+label {
+.selectGeneral input[type="radio"]:checked~div>label,
+.selectGeneral input[type="radio"]:checked+label {
     display: block;
 }
 
@@ -150,21 +174,24 @@ label.selectGeneral input[type="radio"]:checked+label {
     background: none;
     min-height: 30px;
     min-width: 180px;
-    border: 1.4px solid #304269;
+    /*border: 1.4px solid #304269;*/
+    /*border: 1.4px solid;*/
+    border-width: 1.4px;
     border-radius: 5px;
     text-align: center;
     cursor: pointer;
 }
-
 .header_registration p {
     width: 100%;
     margin: 0;
     text-align: center;
     font-size: 0.8rem;
-    color: #304269;
+    /*color: #304269;*/
+    /*color:#fff;*/
     font-family: "Roboto";
     font-weight: 300;
 }
+
 
 @media (max-width: 1060px) {
     .header {
@@ -180,14 +207,13 @@ label.selectGeneral input[type="radio"]:checked+label {
         margin: 2% auto;
         order: 2;
     }
+    .headerLogo {
+        width: 40%;
+    }
 }
 
-.drivers_buttonMass_button {
-    text-decoration: none;
-    background-color: transparent;
-    font-family: "Roboto";
-    font-weight: 500;
-    font-size: 10.5pt;
-    color: #304269;
-    margin: 0px 12.5px 0px 12.5px;
+@media (max-width: 800px) {
+    .headerLogo {
+        width: 45%;
+    }
 }
