--- a/src/components/driverProfile/DriverAdaptedRoute.css
+++ b/src/components/driverProfile/DriverAdaptedRoute.css
@@ -29,3 +29,10 @@
     font-size: 12px;
     color: #ffffff;
 }
+.driversAdaptedRoute_routeBlock{
+    
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+
+}
