--- a/src/components/driverProfile/DriversProfileComments.css
+++ b/src/components/driverProfile/DriversProfileComments.css
@@ -184,6 +184,7 @@
     font-size: 14px;
     color: #304269;
     margin: 0;
+    line-height: 20px;
 }
 .commentBlock_picture{
     display: flex;
@@ -197,3 +198,49 @@
     margin-left: 2%;
     
 }
+
+.news
+{
+ height: 80px;
+ overflow: hidden; /* Обрезаем все, что не помещается в область */
+ background: transparent; /* Цвет фона */
+ padding: 5px; /* Поля вокруг текста */
+ position: relative;
+ text-overflow: ellipsis;
+ width: 95%;
+}
+.news::after
+ {
+  content:'...';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  word-spacing: 99in;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: block;
+  width: 45px;
+  padding-left: 5px;
+  overflow: hidden;
+  pointer-events: none;
+  background:#fff; /* Цвет фона */
+  /*background: #fc0;*/
+ }
+label 
+ {
+   cursor: pointer;
+ }
+
+input:checked + .news 
+ {
+   height: auto;
+ }
+input:checked + .news::after
+ {
+   content: none;
+ }
+.put
+ {
+    position: absolute;
+    clip: rect(1px, 1px, 1px, 1px);      
+ }
