--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,58 +1,60 @@
 
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 50px;
+    bottom: 0px;
+    background-color: #304269;
+}
 
-.footer{
-  display: flex;
-  position: relative;
-  width:100%;
-  height:50px;
-  bottom: 0px;
-  background-color: #304269;
-  padding: 0 15% 0 15%;
+.footer_block {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
 }
-@media (max-width: 360px){
-  .footer {display: none};
-}
-.footer_block{
-  position: absolute;
-  width: 1200px;
-  height:100%;
-}
-.footer_logo{
-  position: absolute;
-  width:145px;
-  height:100%;
-  background: url(pictures/drivers_footer_logo.png) no-repeat;
-}
-.footer_instagramm{
-  position: absolute;
-  top:16px;
-  right: 5px;
-  width:16px;
-  height:16px;
-  background: url(pictures/drivers_footer_instagramm.png) no-repeat;
-}
-.footer_facebook{
-  position: absolute;
-  top:16px;
-  right:38px;
-  width:8px;
-  height: 16px;
-  background: url(pictures/drivers_footer_facebook.png) no-repeat;
-}
-.footerButtons{
-  position: absolute;
-  right: 80px;
-  line-height: 10px;
-}
-.footerButtons_button{
-  top:0px;
-  height: 50px;
-  border: none;
-  background-color: transparent;
 
-  font-family: "Roboto Regular";
+.footerButtons {
+    width: 65%;
+    max-width: 800px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
 
-  font-size: 14px;
-  color:#ffffff;
-  margin: 2px 12.5px 2px 12.5px;
-} 
+.footerButtons_button {
+    border: none;
+    text-decoration: none;
+    outline: none;
+    background: #304269;
+    color: #fff;
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 10.5pt;
+    cursor: pointer;
+}
+
+.footerButtonsIcon img {
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.footerButtonUp {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    bottom: 113px;
+    right: 10%;
+    cursor: pointer;
+    border-radius: 50%;
+    box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.20)
+}
