--- a/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
@@ -62,6 +62,10 @@
     font-weight: bold;
     background: #ff6600;
     border-radius: 5px;
+    cursor: pointer;
+}
+.valueBlock_button:focus{
+    outline: none;
 }
 
 .valueBlock_button.minus{
@@ -110,4 +114,17 @@
     font-size: 10pt;
     font-weight: bold;
     background: none;
+}
+.peopleMenu_stateBlock_cancelButton:hover{
+    color: #f60;
+}
+.peopleMenu_stateBlock_applyButton:hover{
+    color: #f60;
+}
+
+.peopleMenu_stateBlock_cancelButton:focus{
+    outline: none;
+}
+.peopleMenu_stateBlock_applyButton:focus{
+    outline: none;
 }
