--- a/src/components/drivers/DriversBody/DriversProperties/components/ValueMenu/ValueMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/ValueMenu/ValueMenu.css
@@ -5,7 +5,7 @@
     border-radius: 3px;
     box-shadow: 0 0 1px 1px rgb(236, 236, 236);
     width: 200px;
-    height: 82px;
+    height: 92px;
     background-color: #ffffff;
     z-index: 4;
 }
@@ -21,10 +21,19 @@
 
 .valueMenu_borderElement {
     position: absolute;
-    top: 0px;
-    font-size: 9pt;
+    width: 35%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    top: 15px;
+    font-size: 10pt;
     font-family: "Roboto";
     font-weight: 400;
+    color: #304269;
+}
+.valueMenu_borderElement p:nth-child(2){
+    width: 100%;
+    min-width: 60px;
 }
 
 .valueMenu_rightBorder {
@@ -68,35 +77,45 @@
 }
 
 .valueMenu_stateBlock {
-    position: absolute;
-    bottom: 0px;
-    right: 10px;
-    height: 25px;
-    width: 155px;
-    font-size: 9pt;
-    font-family: "Roboto";
-    font-weight: 400;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
 }
 
 .valueMenu_stateBlock_applyButton {
     right: 0px;
-    color: #304269
+    outline: none;
+    border: none;
+    text-decoration: none;
+    cursor: pointer;
+    color: #304269;
+    font-size: 10pt;
+    font-weight: bold;
+    background: none;
 }
 
 .valueMenu_stateBlock_cancelButton {
     right: 65px;
-    color: #b2b2b2;
+    outline: none;
+    border: none;
+    text-decoration: none;
+    cursor: pointer;
+    color: #3c4043;
+    font-size: 10pt;
+    background: none;
 }
 
-.valueMenu_stateBlock_buttonStyle {
-    position: absolute;
-    top: 0px;
-    height: 100%;
-    text-align: center;
-    line-height: 15px;
-    border: none;
-    font-size: 9pt;
-    font-family: "Roboto";
-    font-weight: 400;
-    background-color: transparent
+.valueMenu_stateBlock_applyButton:hover{
+    color: #f60;
+}
+.valueMenu_stateBlock_cancelButton:hover{
+    color: #f60;
+}
+
+.valueMenu_stateBlock_applyButton:focus{
+    outline: none;
+}
+.valueMenu_stateBlock_cancelButton:focus{
+    outline: none;
 }
